--- a/fale-conosco.html
+++ b/fale-conosco.html
@@ -52,8 +52,8 @@
                 <hgroup>
                     <h3>Fale conocsco > Contato</h3>
                     <h1>Formulário de contato</h1>
-                    <h2>por Gustavo Guanabara</h2>
-                    <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    <h2>por Maycol Michel Mohr</h2>
+                    <h3 class="direita">Atualizado em 01/Maio/2021</h3>
                 </hgroup>
             </header>
 
@@ -121,7 +121,7 @@
     </section>
 
     <footer id="rodape">
-        <p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
+        <p>Copyright &copy; 2021 - by Maycol Michel Mohr <br/>
             <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook</a>  | <a href="http://twitter.com/cursosemvideo" target="_blank"> Twitter </a>   </p>
     </footer>
 </div>>
