--- a/specs.html
+++ b/specs.html
@@ -71,7 +71,7 @@
     </section>
 
     <footer id="rodape">
-        <p>Copyright &copy; 2013 - by Gustavo Guanabara <br/>
+        <p>Copyright &copy; 2021 - by Maycol Michel Mohr <br/>
             <a href="http://facebook.com/cursosemvideo" target="_blank"> Facebook</a>  | <a href="http://twitter.com/cursosemvideo" target="_blank"> Twitter </a>   </p>
     </footer>
 </div>>
