--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     <hgroup>
     <h3>Tecnologia >  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Inovações</h3>
     <h1>Saiba tudo sobre o Google Glass</h1>
-    <h2>por Gustavo Guanabara</h2>
-    <h3 class="direita">Atualizado em 23/Abril/2013</h3>
+    <h2>por Maycol Michel Mohr</h2>
+    <h3 class="direita">Atualizado em 01/maio/2021</h3>
     </hgroup>
         </header>
 
