--- a/multimidia.html
+++ b/multimidia.html
@@ -43,8 +43,8 @@
                 <hgroup>
                     <h3>Glass > Multimídia</h3>
                     <h1>Sons e Videos</h1>
-                    <h2>por Gustavo Guanabara</h2>
-                    <h3 class="direita">Atualizado em 01/Maio/2013</h3>
+                    <h2>por Maycol Michel Mohr</h2>
+                    <h3 class="direita">Atualizado em 01/Maio/2021</h3>
                 </hgroup>
             </header>
 
